# urban-area-explorer

./: .pre-commit-config.yaml  README.md  pyproject.toml
.circleci/: config.yml
app/: hello.py  main.py
app/custom_widgets/: gui_widgets.py
app/database/: data.json  data.py
backend/: pyproject.toml
tests/: test_data.py  test_gui_widgets.py  test_hello.py  test_main.py
