[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Akbeeh <Akbeeeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
requests = "^2.31.0"
pytest-qt = "^4.2.0"
pyqt5-qt5 = "5.15.2"
pyqt5 = "5.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
